# NDDEM

./: .gitignore  Boundaries.csv  CI_build_script.sh  DEMND.py  INSTALL-EMSCRIPTEN.md  INSTALL.md  README.md  Samples  Textures  in.segregation  index.html  install.sh  manifest.webmanifest  nightwatch.conf.js  package-lock.json  package.json  run_me_first.py  run_server.bat  server.js  start_talk.bat  webpack.config.js  webpack.config.js.copy
CppCode/: .gitignore  Benchmark.h  CMakeLists.txt  ContactList.cpp  ContactList.h  Contacts.cpp  Contacts.h  CppCode.kdev4  DEMND  DEMND.cpp  DEMND.h  Doxyfile  Makefile  Multiproc.cpp  Multiproc.h  Parameters.cpp  Parameters.h  RunTest.sh  Test  Test.c  Test.cpp  Test.xml  Texturing  Texturing.cpp  TinyPngOut.cpp  TinyPngOut.hpp  Tools.cpp  Tools.h  Typedefs.h  Xml.cpp  Xml.h  XmlTest  in.test2  in.test5  in.test6  in.test7adim  in.test7adimD1  in.test7adimD2  in.test7adimD3  in.test7adimD4  (+7 more)
CppCode/.kdev4/: CppCode.kdev4
CppCode/Backup_18-8-18/: DEMND.cpp  Parameters.h  Test.cpp  Tools.cpp  Tools.h  Typedefs.h  Xml.h
CppCode/CoarseGraining/: CMakeLists.txt  CoarseD2RHO.nrrd  CoarseD2VAVG.nrrd  CoarseD3ChannelRHO.nrrd  CoarseD3ChannelVAVG.nrrd  CoarseD3RHO.nrrd  CoarseD3VAVG.nrrd  CoarseD4RHO.nrrd  CoarseD4TestRHO.nrrd  CoarseD4ThickRHO.nrrd  CoarseD4ThickVAVG.nrrd  CoarseD4VAVG.nrrd  CoarseD5RHO.nrrd  CoarseD5VAVG.nrrd  CoarseD6RHO.nrrd  CoarseD6VAVG.nrrd  CoarseMUID3.mat  CoarseMUID5.mat  Coarsed-0.vtk  Coarsed-1.vtk  Coarsed-10.vtk  Coarsed-11.vtk  Coarsed-12.vtk  Coarsed-13.vtk  Coarsed-14.vtk  Coarsed-15.vtk  Coarsed-16.vtk  Coarsed-17.vtk  Coarsed-18.vtk  Coarsed-19.vtk  Coarsed-2.vtk  Coarsed-20.vtk  Coarsed-21.vtk  Coarsed-22.vtk  Coarsed-23.vtk  Coarsed-24.vtk  Coarsed-25.vtk  Coarsed-26.vtk  Coarsed-27.vtk  Coarsed-28.vtk  (+94 more)
CppCode/CoarseGraining/html/: Typedefs_8h_source.html  annotated.html  classCoarsing-members.html  classCoarsing.html  classCoarsing__coll__graph.map  classTools-members.html  functions.html  index.html  structData-members.html  structField.html
CppCode/CoarseGraining/latex/: classCGPoint.tex  classCoarsing.tex  classCoarsing__coll__graph.md5  structField.tex
CppCode/DEMND.dSYM/Contents/: Info.plist
CppCode/Dem/: .DEMND.cpp.kate-swp  Benchmark.h  CMakeLists.txt  ContactList.cpp  ContactList.h  Contacts.cpp  Contacts.h  DEMND  DEMND.cpp  DEMND.h  Debug.txt  Logfile  Makefile  Multiproc.cpp  Multiproc.h  OutputAdim.xml  Parameters.cpp  Parameters.h  Test.cpp  Test.csv  TestList  Texturing.cpp  Tools.cpp  Tools.h  Typedefs.h  Xml.cpp  callgrind.out.7642  in.channelD3  in.lonelyD10  in.lonelyD3  in.lonelyD30  in.lonelyD4  in.lonelyD5  in.lonelyD6  in.muID2  in.muID2rev  in.muID2revb  in.muID3rev  in.muID4  in.muID4rev  (+25 more)
CppCode/Dem/Backup_18-8-18/: Benchmark.h  ContactList.cpp  ContactList.h  Contacts.cpp  Contacts.h  Makefile  Parameters.cpp
CppCode/Dem/Quasicrystals/: dump-00000.csv  dumpA-00000.csv
CppCode/NrrdIO-1.11.0-src/: NrrdIO.h
CppCode/Texturing/: .Texturing.cpp.kate-swp  CMakeLists.txt  Colormap.nrrd  Colormap.vtk  ColormapD3.nrrd  ColormapD4.nrrd  ColormapD4Animate.pvsm  ColormapD5.nrrd  Makefile  Server.cpp  Server.h  ServerTest.html  Test  Test.cpp  Test.vtk  TextureVisu.vtk  Texturing  Texturing.cpp  Texturing.h  TexturingServer  TexturingServer.exe.stackdump  Tools.h  io.cpp  io.h
CppCode/Texturing.dSYM/Contents/: Info.plist
CppCode/html/: Benchmark_8h.html  Benchmark_8h_source.html  CoarseGraining_2Typedefs_8h.html  CoarseGraining_2Typedefs_8h_source.html  Coarsing_8cpp.html  Coarsing_8h.html  Coarsing_8h_source.html  ContactList_8cpp.html  ContactList_8h.html  ContactList_8h_source.html  Contacts_8cpp.html  Contacts_8h.html  Contacts_8h_source.html  DEMND_8cpp.html  DEMND_8h.html  DEMND_8h_source.html  Dem_2Tools_8h.html  Dem_2Tools_8h_source.html  Dem_2Typedefs_8h.html  Dem_2Typedefs_8h_source.html  IOLiggghts_8cpp.html  IOLiggghts_8h.html  IOLiggghts_8h_source.html  IONDDEM_8cpp.html  IONDDEM_8h.html  IONDDEM_8h_source.html  Multiproc_8cpp.html  Multiproc_8h.html  Multiproc_8h_source.html  Parameters_8cpp.html  Parameters_8h.html  Parameters_8h_source.html  Server_8cpp.html  Server_8h.html  Server_8h_source.html  Texturing_2Tools_8h.html  Texturing_2Tools_8h_source.html  Texturing_8cpp.html  Texturing_8h.html  Texturing_8h_source.html  (+170 more)
CppCode/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  (+104 more)
src/: .gitignore  CMakeLists.txt  DemCgND.cpp  DemCgND.h  Doxyfile  em_bindings.h  install.sh
src/CoarseGraining/: CMakeLists.txt  CoarseD2VAVG.nrrd  CoarseD3ChannelRHO.nrrd  CoarseD3ChannelVAVG.nrrd  CoarseD4RHO.nrrd  CoarseD4TestVAVG.nrrd  CoarseD5ThickRHO.nrrd  CoarseD5ThickVAVG.nrrd  CoarseD6VAVG.nrrd  CoarseGraining.cpp  CoarseGraining.h  CoarseMUID2.mat  CoarseMUID4.mat  CoarseMUID6.mat  CoarsedRHO.nrrd  CoarsedVAVG.nrrd  Coarsing.cpp  Coarsing.h  IO  IOLiggghts.cpp  IOLiggghts.h  IONDDEM.cpp  IONDDEM.h  InputFileCommand.md  Main.cpp  Main.h  Makefile  Parameters.h  Reader-Liggghts.cpp  Reader-Liggghts.h  Reader-Mercury.cpp  Reader-Mercury.h  Reader-NDDEM.h  Reader-Yade.cpp  Reader-Yade.h  Reader-interactive.h  Reader.h  Typedefs.h  WindowLibrary.h  em_bindings.h  (+5 more)
src/Dem/: .gdb_history  Benchmark.h  Boundaries.h  CMakeLists.txt  Cells.h  ContactList.cpp  ContactList.h  Contacts.h  DEMND.cpp  DEMND.h  HyperpyramidN3.stl  InputFileCommand.md  LinkedList  LinkedList.cpp  LinkedList.h  Logfile  Mesh-D3.json  Mesh-D4.json  Mesh.h  Mesh.json  Multiproc.h  Octree.cpp  Octree.h  Parameters.h  Preprocessor_macros.h  RigidBody.h  Tools.cpp  Tools.h  Typedefs.h  VolIntertia.m  Vtk.h  Xml.cpp  Xml.h  callgrind.h  emscripten_specific.h  in.channelD3  in.dropsD3  in.dropsD4  in.lonelyD3  in.lonelyD5  (+30 more)
src/NrrdIO-1.11.0-src/: CMakeLists.txt  README.txt  Test  Test.cpp  privateNrrd.h  test.nrrd
src/Texturing/: CMakeLists.txt  Colormap.vtk  ColormapD4.nrrd  Server.cpp  Texturing.cpp  Texturing.h  TexturingServer  Tools.h  io.cpp
(+12897 files in other folders)
